--- a/styles/main.css
+++ b/styles/main.css
@@ -1,102 +1,111 @@
 
-* {
-	font-family: 'Lato', sans-serif;
-	background-color: #F2EADD;
-}
 body {
 	padding-top: 15px;
-	background-color: #F2EADD;
+	background-color: #f2eadd;
+	font-family: "Lato";
+	width: 80%;
 }
+
 .logoDiv {
-	margin-left: 0px;
-	margin-bottom: 0px;
+	margin-left: 0;
+	margin-bottom: 0;
 }
+
 #logo {
-	width:60%;
+	width: 60%;
 	height: 120px;
-	margin-left: 0px;
-	margin-bottom: 0px;
+	margin-left: 0;
+	margin-bottom: 0;
 }
+
 .name {
-	text-align:end;
+	text-align: right;
 }
+
 .thinLato { 
-	font-weight:300;
+	font-weight: 300;
 }
-.greyBorder {
-	border-bottom: solid 2px #BCBBBB;	
-}
+
 #mainImage {
-	margin:0;
-	width:100%;	
+	margin: 0;
+	width: 100%;
 	height: 300px;
 }
+
 .littleImages {
 	margin-left: 25px;
-	margin-top: 20px;	
+	margin-top: 20px;
 }
+
 .greyColor {
-	color:#969696;	
+	color: #969696;
 }
+
 .orangeColor {
-	color: #F8981C;
-}	
+	color: #f8981c;
+}
+
 .greenColor {
-	color: #747704;	
+	color: #747704;
 }
+
 .workImages {
-	margin: auto;	
+	margin: auto;
 }
+
 .centerAlign {
-	text-align: center;	
+	text-align: center;
 }
+
 .redBorder {
-	border: double #97524B 2px;	
+	border: double #97524b 2px;
 }
+
 .workTitles {
-	margin: 0 auto;	
+	margin: 0 auto;
 	font-size: 24px;
 	padding-top: 10px;
 }
+
 .worksAnchors {
 	margin: 0 auto;
-	padding-top:0;
-	padding:-top: 0;
-}
-.workAnchors:hover	{
-	font-weight: 600;
-	cursor: pointer;		
+	padding-top: 0;
 }
 
-.thin {
+.workAnchors:hover	{
+	font-weight: 600;
+	cursor: pointer;
 }
+
 .noPadding  {
-	padding: 0px;
+	padding: 0;
 }
+
 @media (max-width: 624px) {
+
 	#logo {
 		display: none;
 	}
+
 	#nameDiv{
 		width: 100%;
 	}
+
 	.name {
 		text-align: center;
 	}
+
 	#mainImgDiv {
 		padding: 20px;
 	}
+
 	h3 {
 		text-align: center;
 	}
+	
 	.workDivs {
 		width: 100%;
 		margin-top: 10px;
 		margin-bottom: 30px;
-	}
-	.workTitles {
-		
-	}
-
-	
+	}	
 }
