--- a/styles/main.css
+++ b/styles/main.css
@@ -84,7 +84,9 @@ body {
 @media (max-width: 624px) {
 
 	#logo {
-		display: none;
+		display: block;
+		margin-right: auto;
+		margin-left: auto;
 	}
 
 	#nameDiv{
